syntax = "proto3";

package ai.lzy.v1.disk;

option java_outer_classname = "LD";
option java_package = "ai.lzy.v1.disk";

enum DiskType {
  UNSPECIFIED = 0;
  LOCAL_DIR = 1;
  S3_STORAGE = 2;
  //COMPUTE_SSD = 3;
  //K8S_VOLUME = 4;
}

message Disk {
  string id = 1;
  DiskSpec spec = 2;
}

message DiskSpec {
  oneof spec {
    LocalDirSpec local_dir_spec = 1;
    S3StorageSpec s3_storage_spec = 2;
  }
}

message LocalDirSpec {
  int32 size_gb = 1;
  string fullPath = 2;
  string folderName = 3;
}

message S3StorageSpec {
  int32 size_gb = 1;
  string bucket = 2;
}
